--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.12.*"
 fastapi = {extras = ["standard"], version = "^0.112.0"}
+sqlalchemy = "^2.0.31"
+pydantic-settings = "^2.4.0"
+psycopg = {extras = ["binary"], version = "^3.2.1"}
+alembic = "^1.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -15,6 +19,7 @@ pytest = "^8.3.2"
 pytest-cov = "^5.0.0"
 taskipy = "^1.13.0"
 ruff = "^0.5.6"
+testcontainers = "^4.7.2"
 
 [tool.ruff]
 line-length = 79
