--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = "^2.0.31"
 pydantic-settings = "^2.4.0"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 alembic = "^1.13.2"
+pwdlib = {extras = ["argon2"], version = "^0.2.0"}
 
 
 [tool.poetry.group.dev.dependencies]
