--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ pytest-cov = "^5.0.0"
 taskipy = "^1.13.0"
 ruff = "^0.5.6"
 testcontainers = "^4.7.2"
+freezegun = "^1.5.1"
+factory-boy = "^3.3.1"
 
 [tool.ruff]
 line-length = 79
